@@ -15,8 +15,13 @@ public class SparkClient {
     public static void main(String[] args) {
         System.out.println("Please Enter Which File To Work On: ");
         try{
-            Process display = Runtime.getRuntime().exec("hdfs dfs -ls /var/mdp-cloud/");
-            display.waitFor();
+            //Process display = Runtime.getRuntime().exec("hdfs dfs -ls /var/mdp-cloud/");
+            //display.waitFor();
+            ProcessBuilder pb = new ProcessBuilder("hdfs dfs -ls /var/mdp-cloud/");
+            pb.redirectOutput(Redirect.INHERIT);
+            pb.redirectError(Redirect.INHERIT);
+            Process p = pb.start();
+            p.waitFor();
         }
         catch(Exception e){
             e.printStackTrace();
